# comfyui-agent-adapter

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py  base64_nodes.py  image_size_nodes.py
utils/: image_utils.py
